--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -27,11 +28,11 @@
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react-dom": "^18.0.0",
     "react-native": "0.69.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "^0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
